src/test/resources/all/issues/silver/0050.vpr
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

field f: Int
//:: ExpectedOutput(typechecker.error)
field x: Int

method test1(x: Ref)
  requires acc(x.x) // error: expected field
{}

method test2(x: Ref)
  requires acc(x.f) // no error
{}
